--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>51d96791-cc37-4e79-93fe-6c90ea69dc07</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>UBS & IT Club</title>
+    <meta name="description" content="Cyberrs.uz" />
+    <meta name="author" content="Cyberrs.uz" />
 
-    <meta property="og:title" content="51d96791-cc37-4e79-93fe-6c90ea69dc07" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="UBS & IT Club" />
+    <meta property="og:description" content="Cyberrs.uz" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="Cyberrs.uz" />
   </head>
 
   <body>
